[gd_scene load_steps=6 format=3 uid="uid://bhyets3th3o0g"]

[ext_resource type="Script" path="res://Menu/pause_screen.gd" id="1_t1vkh"]
[ext_resource type="Theme" uid="uid://dfgnx6so8jd63" path="res://Inventory/GUI/BG.tres" id="1_ucrj1"]
[ext_resource type="PackedScene" uid="uid://d1eb2l7wanewd" path="res://Menu/settings.tscn" id="3_m44or"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nm5ar"]
bg_color = Color(0.6, 0.6, 0.6, 0.360784)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 16.0
expand_margin_top = 16.0
expand_margin_right = 16.0
expand_margin_bottom = 16.0

[sub_resource type="LabelSettings" id="LabelSettings_n2yax"]
font_size = 50
outline_size = 32
outline_color = Color(0, 0, 0, 1)

[node name="PauseScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t1vkh")
title_screen = "res://Menu/title_screen.tscn"

[node name="MenuPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(250, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nm5ar")

[node name="Menu" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Title" type="Label" parent="MenuPanel/Menu"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_n2yax")
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="MenuPanel/Menu"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Resume" type="Button" parent="MenuPanel/Menu/Buttons"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("1_ucrj1")
theme_override_font_sizes/font_size = 25
text = "Resume"

[node name="Settings" type="Button" parent="MenuPanel/Menu/Buttons"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("1_ucrj1")
theme_override_font_sizes/font_size = 25
text = "Settings"

[node name="Quit" type="Button" parent="MenuPanel/Menu/Buttons"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("1_ucrj1")
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="Settings" parent="." instance=ExtResource("3_m44or")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MenuPanel/Menu/Buttons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MenuPanel/Menu/Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MenuPanel/Menu/Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="backed" from="Settings" to="." method="_on_settings_backed"]
